--- a/package.json
+++ b/package.json
@@ -1,15 +1,36 @@
 {
   "name": "recipe",
   "version": "1.0.0",
-  "description": "",
-  "main": "first.js",
+  "description": "a project to fetch data via API and generate shopping list",
+  "main": "index.js",
   "scripts": {
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "API",
+    "localStorage",
+    "DOM"
+  ],
   "author": "limingxia <limingxia07@gmail.com> (http://www.prawn-dumpling.com/)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
+    "dotenv-webpack": "^1.7.0",
     "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/node": "^7.6.1",
+    "@babel/preset-env": "^7.6.0",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0"
   }
 }
