--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "test": "babel src -d lib --presets @babel/preset-env --sourceMaps inline; webpack --devtool eval-source-map --mode development"
+    "test-dev": "babel src -d lib --presets @babel/preset-env --sourceMaps inline; webpack --devtool eval-source-map --mode development"
   },
   "keywords": [
     "API",
@@ -26,9 +26,11 @@
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
+    "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/register": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "html-webpack-plugin": "^3.2.0",
