--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,7 @@
       }
     ]
   ],
-  "plugins": ["@babel/plugin-transform-runtime"],
+  "plugins": ["@babel/plugin-transform-runtime","@babel/plugin-syntax-dynamic-import"],
   "sourceMaps": "both",
   "retainLines": true
 }
