--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "test-dev": "babel src -d lib --presets @babel/preset-env --sourceMaps inline; webpack --devtool eval-source-map --mode development"
+    "test-dev": "babel src -d lib --presets @babel/preset-env --sourceMaps inline; webpack --devtool eval-source-map --mode development",
+    "load-env": "node -r dotenv/config"
   },
   "keywords": [
     "API",
@@ -26,6 +27,7 @@
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
@@ -33,9 +35,12 @@
     "@babel/runtime": "^7.6.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
+    "dotenv": "^8.1.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
